# etcd

./: BUILD  WORKSPACE  bill-of-materials.json  main.go
alarm/: BUILD.bazel  alarms.go
auth/: BUILD.bazel  range_perm_cache.go  range_perm_cache_test.go  store.go  store_test.go
auth/authpb/: BUILD.bazel
client/: BUILD.bazel  README.md  client.go  client_test.go  discover.go  doc.go  example_keys_test.go  keys.go  main_test.go  members.go  members_test.go
client/integration/: BUILD.bazel  client_test.go  main_test.go
clientv3/: BUILD.bazel  auth.go  client.go  client_test.go  cluster.go  compact_op.go  compact_op_test.go  compare.go  example_auth_test.go  example_cluster_test.go  example_kv_test.go  example_lease_test.go  example_maintenence_test.go  example_metrics_test.go  example_test.go  example_watch_test.go  health_balancer_test.go  kv.go  lease.go  main_test.go  maintenance.go  op.go  op_test.go  retry.go  txn.go  txn_test.go  watch.go  watch_test.go
clientv3/clientv3util/: BUILD.bazel  example_key_test.go  util.go
clientv3/concurrency/: BUILD.bazel  election.go  example_election_test.go  example_mutex_test.go  example_stm_test.go  key.go  main_test.go  mutex.go  session.go  stm.go
clientv3/integration/: BUILD.bazel  black_hole_test.go  cluster_test.go  dial_test.go  kv_test.go  lease_test.go  leasing_test.go  logger_test.go  maintenance_test.go  metrics_test.go  mirror_test.go  namespace_test.go  network_partition_test.go  role_test.go  server_shutdown_test.go  txn_test.go  user_test.go  util.go  watch_test.go
clientv3/leasing/: BUILD.bazel  cache.go  kv.go  txn.go  util.go
clientv3/mirror/: BUILD.bazel  syncer.go
clientv3/namespace/: BUILD.bazel  kv.go  lease.go  watch.go
clientv3/naming/: BUILD.bazel  doc.go  grpc.go  grpc_test.go
clientv3/ordering/: BUILD.bazel  kv.go  kv_test.go  logger_test.go  util.go  util_test.go
clientv3/yaml/: BUILD.bazel  config.go
compactor/: BUILD.bazel  compactor.go  compactor_test.go  periodic.go  periodic_test.go  revision.go  revision_test.go
contrib/raftexample/: BUILD.bazel  httpapi.go  kvstore.go  main.go  raft.go  raftexample_test.go
discovery/: BUILD.bazel  discovery.go  discovery_test.go
e2e/: BUILD.bazel  cluster_proxy_test.go  cluster_test.go  ctl_v2_test.go  ctl_v3_alarm_test.go  ctl_v3_auth_test.go  ctl_v3_elect_test.go  ctl_v3_endpoint_test.go  ctl_v3_lock_test.go  ctl_v3_member_test.go  ctl_v3_migrate_test.go  ctl_v3_move_leader_test.go  ctl_v3_snapshot_test.go  ctl_v3_test.go  etcd_config_test.go  etcd_corrupt_test.go  etcd_process.go  etcd_release_upgrade_test.go  etcd_spawn_cov.go  etcd_spawn_nocov.go  gateway_test.go  main_test.go  metrics_test.go  util.go  v2_curl_test.go  v3_curl_test.go
embed/: BUILD.bazel  config.go  config_test.go  doc.go  etcd.go  serve.go  serve_test.go  util.go
etcdctl/: BUILD.bazel  main.go
etcdctl/ctlv2/: BUILD.bazel  ctl.go
etcdctl/ctlv3/: BUILD.bazel  ctl.go  ctl_cov.go  ctl_nocov.go  help.go
etcdmain/: BUILD.bazel  config.go  config_test.go  etcd.go  gateway.go  grpc_proxy.go  help.go  util.go
etcdserver/: BUILD.bazel  apply.go  apply_auth.go  apply_v2.go  backend.go  cluster_util.go  cluster_util_test.go  config.go  config_test.go  corrupt.go  metrics.go  quota.go  raft.go  raft_test.go  server.go  server_test.go  snapshot_merge.go  storage.go  util.go  util_test.go  v2_server.go  v3_server.go
etcdserver/api/: BUILD.bazel  capability.go  cluster.go
etcdserver/auth/: BUILD.bazel  auth.go  auth_requests.go  auth_test.go
etcdserver/etcdserverpb/: BUILD.bazel  rpc.pb.go
etcdserver/membership/: BUILD.bazel  cluster.go  cluster_test.go  errors.go  member.go  member_test.go  store.go
etcdserver/stats/: BUILD.bazel  server.go  stats.go
integration/: BUILD.bazel  bridge.go  cluster.go  cluster_direct.go  cluster_proxy.go  cluster_test.go  embed_test.go  logger_test.go  member_test.go  metrics_test.go  network_partition_test.go  util_test.go  v2_http_kv_test.go  v3_alarm_test.go  v3_auth_test.go  v3_barrier_test.go  v3_double_barrier_test.go  v3_election_test.go  v3_grpc_inflight_test.go  v3_grpc_test.go  v3_health_test.go  v3_leadership_test.go  v3_lease_test.go  v3_lock_test.go  v3_queue_test.go  v3_stm_test.go  v3_tls_test.go  v3_watch_test.go  v3election_grpc_test.go  v3lock_grpc_test.go
lease/: BUILD.bazel  lessor.go  lessor_test.go
lease/leasehttp/: BUILD.bazel  http.go  http_test.go
lease/leasepb/: BUILD.bazel  lease.pb.go
mvcc/: BUILD.bazel  kv.go  kv_test.go  kv_view.go  kvstore.go  kvstore_bench_test.go  kvstore_compaction_test.go  kvstore_test.go  kvstore_txn.go  metrics_txn.go  util.go  watchable_store.go  watchable_store_bench_test.go  watchable_store_test.go  watchable_store_txn.go  watcher.go  watcher_bench_test.go  watcher_group.go  watcher_test.go
mvcc/backend/: BUILD.bazel  backend.go
mvcc/mvccpb/: BUILD.bazel
raft/: BUILD.bazel  example_test.go  log.go  log_test.go  log_unstable.go  log_unstable_test.go  node.go  node_test.go  raft.go  raft_flow_control_test.go  raft_paper_test.go  raft_snap_test.go  raft_test.go  rawnode.go  rawnode_test.go  read_only.go  status.go  storage.go  storage_test.go  util.go  util_test.go
raft/raftpb/: BUILD.bazel
rafthttp/: BUILD.bazel  coder.go  functional_test.go  http.go  http_test.go  msg_codec.go  msg_codec_test.go  msgappv2_codec.go  msgappv2_codec_test.go  peer.go  peer_status.go  peer_test.go  pipeline.go  pipeline_test.go  remote.go  snapshot_sender.go  snapshot_test.go  stream.go  stream_test.go  transport.go  transport_bench_test.go  transport_test.go  urlpick.go  urlpick_test.go  util.go  util_test.go
snap/: BUILD.bazel  db.go  message.go  snapshotter.go  snapshotter_test.go
snapshot/: BUILD.bazel  v3_snapshot.go
store/: BUILD.bazel  event_history.go  event_test.go  node.go  node_extern_test.go  stats_test.go  store.go  store_test.go  store_ttl_test.go  store_v2_test.go  store_v2v3_test.go  watcher_hub.go
wal/: BUILD.bazel  decoder.go  encoder.go  file_pipeline.go  record_test.go  repair.go  repair_test.go  util.go  wal.go  wal_bench_test.go  wal_test.go
(+260 files in other folders)
