load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "jwt.go",
        "nop.go",
        "range_perm_cache.go",
        "simple_token.go",
        "store.go",
    ],
    importpath = "github.com/davidsmd/etcd/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//auth/authpb:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//mvcc/backend:go_default_library",
        "//pkg/adt:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "jwt_test.go",
        "range_perm_cache_test.go",
        "simple_token_test.go",
        "store_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//auth/authpb:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//mvcc/backend:go_default_library",
        "//pkg/adt:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
