load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auth_role.go",
        "auth_user.go",
        "cancelreq.go",
        "client.go",
        "cluster_error.go",
        "curl.go",
        "discover.go",
        "doc.go",
        "keys.generated.go",
        "keys.go",
        "members.go",
        "util.go",
    ],
    importpath = "github.com/davidsmd/etcd/client",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/pathutil:go_default_library",
        "//pkg/srv:go_default_library",
        "//pkg/types:go_default_library",
        "//version:go_default_library",
        "@com_github_ugorji_go//codec:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "example_keys_test.go",
        "fake_transport_test.go",
        "keys_bench_test.go",
        "keys_test.go",
        "main_test.go",
        "members_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//integration:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/transport:go_default_library",
        "//pkg/types:go_default_library",
        "//version:go_default_library",
    ],
)
