load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "client.go",
        "cluster.go",
        "compact_op.go",
        "compare.go",
        "config.go",
        "doc.go",
        "health_balancer.go",
        "kv.go",
        "lease.go",
        "logger.go",
        "maintenance.go",
        "op.go",
        "options.go",
        "ready_wait.go",
        "retry.go",
        "sort.go",
        "txn.go",
        "watch.go",
    ],
    importpath = "github.com/davidsmd/etcd/clientv3",
    visibility = ["//visibility:public"],
    deps = [
        "//auth/authpb:go_default_library",
        "//etcdserver/api/v3rpc/rpctypes:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "//pkg/types:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "compact_op_test.go",
        "example_auth_test.go",
        "example_cluster_test.go",
        "example_kv_test.go",
        "example_lease_test.go",
        "example_maintenence_test.go",
        "example_metrics_test.go",
        "example_test.go",
        "example_watch_test.go",
        "health_balancer_test.go",
        "logger_test.go",
        "main_test.go",
        "op_test.go",
        "txn_test.go",
        "watch_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//auth:go_default_library",
        "//etcdserver/api/v3rpc/rpctypes:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//integration:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/transport:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
