load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "etcd_process.go",
        "etcd_spawn_nocov.go",
        "util.go",
    ],
    importpath = "github.com/davidsmd/etcd/e2e",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/expect:go_default_library",
        "//pkg/fileutil:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cluster_direct_test.go",
        "cluster_test.go",
        "ctl_v2_test.go",
        "ctl_v3_alarm_test.go",
        "ctl_v3_auth_test.go",
        "ctl_v3_compact_test.go",
        "ctl_v3_defrag_test.go",
        "ctl_v3_elect_test.go",
        "ctl_v3_endpoint_test.go",
        "ctl_v3_kv_test.go",
        "ctl_v3_lease_test.go",
        "ctl_v3_lock_test.go",
        "ctl_v3_make_mirror_test.go",
        "ctl_v3_member_test.go",
        "ctl_v3_migrate_test.go",
        "ctl_v3_move_leader_test.go",
        "ctl_v3_role_test.go",
        "ctl_v3_snapshot_test.go",
        "ctl_v3_test.go",
        "ctl_v3_txn_test.go",
        "ctl_v3_user_test.go",
        "ctl_v3_watch_test.go",
        "etcd_config_test.go",
        "etcd_corrupt_test.go",
        "etcd_release_upgrade_test.go",
        "gateway_test.go",
        "main_test.go",
        "metrics_test.go",
        "v2_curl_test.go",
        "v2_test.go",
        "v3_curl_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//clientv3:go_default_library",
        "//etcdserver:go_default_library",
        "//etcdserver/api/v3election/v3electionpb:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "//pkg/expect:go_default_library",
        "//pkg/fileutil:go_default_library",
        "//pkg/flags:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/transport:go_default_library",
        "//pkg/types:go_default_library",
        "//version:go_default_library",
        "@com_github_coreos_bbolt//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
    ],
)
