load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "doc.go",
        "etcd.go",
        "serve.go",
        "util.go",
    ],
    importpath = "github.com/davidsmd/etcd/embed",
    visibility = ["//visibility:public"],
    deps = [
        "//compactor:go_default_library",
        "//etcdserver:go_default_library",
        "//etcdserver/api/etcdhttp:go_default_library",
        "//etcdserver/api/v2http:go_default_library",
        "//etcdserver/api/v2v3:go_default_library",
        "//etcdserver/api/v3client:go_default_library",
        "//etcdserver/api/v3election:go_default_library",
        "//etcdserver/api/v3election/v3electionpb:go_default_library",
        "//etcdserver/api/v3election/v3electionpb/gw:go_default_library",
        "//etcdserver/api/v3lock:go_default_library",
        "//etcdserver/api/v3lock/v3lockpb:go_default_library",
        "//etcdserver/api/v3lock/v3lockpb/gw:go_default_library",
        "//etcdserver/api/v3rpc:go_default_library",
        "//etcdserver/etcdserverpb/gw:go_default_library",
        "//pkg/cors:go_default_library",
        "//pkg/debugutil:go_default_library",
        "//pkg/netutil:go_default_library",
        "//pkg/runtime:go_default_library",
        "//pkg/srv:go_default_library",
        "//pkg/tlsutil:go_default_library",
        "//pkg/transport:go_default_library",
        "//pkg/types:go_default_library",
        "//rafthttp:go_default_library",
        "//wal:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_soheilhy_cmux//:go_default_library",
        "@com_github_tmc_grpc_websocket_proxy//wsproxy:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
        "@org_golang_x_net//trace:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "serve_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//auth:go_default_library",
        "//pkg/transport:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
    ],
)
