load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "doc.go",
        "etcd.go",
        "gateway.go",
        "grpc_proxy.go",
        "help.go",
        "main.go",
        "util.go",
    ],
    importpath = "github.com/davidsmd/etcd/etcdmain",
    visibility = ["//visibility:public"],
    deps = [
        "//clientv3:go_default_library",
        "//clientv3/leasing:go_default_library",
        "//clientv3/namespace:go_default_library",
        "//clientv3/ordering:go_default_library",
        "//discovery:go_default_library",
        "//embed:go_default_library",
        "//etcdserver:go_default_library",
        "//etcdserver/api/etcdhttp:go_default_library",
        "//etcdserver/api/v3election/v3electionpb:go_default_library",
        "//etcdserver/api/v3lock/v3lockpb:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//pkg/cors:go_default_library",
        "//pkg/debugutil:go_default_library",
        "//pkg/fileutil:go_default_library",
        "//pkg/flags:go_default_library",
        "//pkg/ioutil:go_default_library",
        "//pkg/osutil:go_default_library",
        "//pkg/srv:go_default_library",
        "//pkg/transport:go_default_library",
        "//pkg/types:go_default_library",
        "//proxy/grpcproxy:go_default_library",
        "//proxy/httpproxy:go_default_library",
        "//proxy/tcpproxy:go_default_library",
        "//version:go_default_library",
        "@com_github_coreos_go_systemd//daemon:go_default_library",
        "@com_github_coreos_go_systemd//util:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_soheilhy_cmux//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//embed:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
    ],
)
