load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apply.go",
        "apply_auth.go",
        "apply_v2.go",
        "backend.go",
        "cluster_util.go",
        "config.go",
        "consistent_index.go",
        "corrupt.go",
        "doc.go",
        "errors.go",
        "metrics.go",
        "quota.go",
        "raft.go",
        "server.go",
        "snapshot_merge.go",
        "storage.go",
        "util.go",
        "v2_server.go",
        "v3_server.go",
    ],
    importpath = "github.com/davidsmd/etcd/etcdserver",
    visibility = ["//visibility:public"],
    deps = [
        "//alarm:go_default_library",
        "//auth:go_default_library",
        "//clientv3:go_default_library",
        "//compactor:go_default_library",
        "//discovery:go_default_library",
        "//etcdserver/api:go_default_library",
        "//etcdserver/api/v2http/httptypes:go_default_library",
        "//etcdserver/api/v3rpc/rpctypes:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//etcdserver/membership:go_default_library",
        "//etcdserver/stats:go_default_library",
        "//lease:go_default_library",
        "//lease/leasehttp:go_default_library",
        "//mvcc:go_default_library",
        "//mvcc/backend:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "//pkg/contention:go_default_library",
        "//pkg/fileutil:go_default_library",
        "//pkg/idutil:go_default_library",
        "//pkg/netutil:go_default_library",
        "//pkg/pbutil:go_default_library",
        "//pkg/runtime:go_default_library",
        "//pkg/schedule:go_default_library",
        "//pkg/transport:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/wait:go_default_library",
        "//raft:go_default_library",
        "//raft/raftpb:go_default_library",
        "//rafthttp:go_default_library",
        "//snap:go_default_library",
        "//store:go_default_library",
        "//version:go_default_library",
        "//wal:go_default_library",
        "//wal/walpb:go_default_library",
        "@com_github_coreos_go_semver//semver:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cluster_util_test.go",
        "config_test.go",
        "consistent_index_test.go",
        "raft_test.go",
        "server_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//etcdserver/etcdserverpb:go_default_library",
        "//etcdserver/membership:go_default_library",
        "//lease:go_default_library",
        "//mvcc:go_default_library",
        "//mvcc/backend:go_default_library",
        "//pkg/fileutil:go_default_library",
        "//pkg/idutil:go_default_library",
        "//pkg/mock/mockstorage:go_default_library",
        "//pkg/mock/mockstore:go_default_library",
        "//pkg/mock/mockwait:go_default_library",
        "//pkg/pbutil:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/wait:go_default_library",
        "//raft:go_default_library",
        "//raft/raftpb:go_default_library",
        "//rafthttp:go_default_library",
        "//snap:go_default_library",
        "//store:go_default_library",
        "//version:go_default_library",
        "@com_github_coreos_go_semver//semver:go_default_library",
    ],
)
