load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bridge.go",
        "cluster.go",
        "cluster_direct.go",
        "doc.go",
    ],
    importpath = "github.com/davidsmd/etcd/integration",
    visibility = ["//visibility:public"],
    deps = [
        "//client:go_default_library",
        "//clientv3:go_default_library",
        "//embed:go_default_library",
        "//etcdserver:go_default_library",
        "//etcdserver/api/etcdhttp:go_default_library",
        "//etcdserver/api/v2http:go_default_library",
        "//etcdserver/api/v3client:go_default_library",
        "//etcdserver/api/v3election:go_default_library",
        "//etcdserver/api/v3election/v3electionpb:go_default_library",
        "//etcdserver/api/v3lock:go_default_library",
        "//etcdserver/api/v3lock/v3lockpb:go_default_library",
        "//etcdserver/api/v3rpc:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/tlsutil:go_default_library",
        "//pkg/transport:go_default_library",
        "//pkg/types:go_default_library",
        "//rafthttp:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@com_github_soheilhy_cmux//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cluster_test.go",
        "embed_test.go",
        "logger_test.go",
        "main_test.go",
        "member_test.go",
        "metrics_test.go",
        "network_partition_test.go",
        "util_test.go",
        "v2_http_kv_test.go",
        "v3_alarm_test.go",
        "v3_auth_test.go",
        "v3_barrier_test.go",
        "v3_double_barrier_test.go",
        "v3_election_test.go",
        "v3_grpc_inflight_test.go",
        "v3_grpc_test.go",
        "v3_health_test.go",
        "v3_leadership_test.go",
        "v3_lease_test.go",
        "v3_lock_test.go",
        "v3_queue_test.go",
        "v3_stm_test.go",
        "v3_tls_test.go",
        "v3_watch_test.go",
        "v3election_grpc_test.go",
        "v3lock_grpc_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//auth/authpb:go_default_library",
        "//client:go_default_library",
        "//clientv3:go_default_library",
        "//clientv3/concurrency:go_default_library",
        "//contrib/recipes:go_default_library",
        "//embed:go_default_library",
        "//etcdserver:go_default_library",
        "//etcdserver/api/v3election/v3electionpb:go_default_library",
        "//etcdserver/api/v3lock/v3lockpb:go_default_library",
        "//etcdserver/api/v3rpc:go_default_library",
        "//etcdserver/api/v3rpc/rpctypes:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//mvcc:go_default_library",
        "//mvcc/backend:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/transport:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)
