load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "lessor.go",
    ],
    importpath = "github.com/davidsmd/etcd/lease",
    visibility = ["//visibility:public"],
    deps = [
        "//lease/leasepb:go_default_library",
        "//mvcc/backend:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["lessor_test.go"],
    embed = [":go_default_library"],
    deps = ["//mvcc/backend:go_default_library"],
)
