load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "index.go",
        "key_index.go",
        "kv.go",
        "kv_view.go",
        "kvstore.go",
        "kvstore_compaction.go",
        "kvstore_txn.go",
        "metrics.go",
        "metrics_txn.go",
        "revision.go",
        "util.go",
        "watchable_store.go",
        "watchable_store_txn.go",
        "watcher.go",
        "watcher_group.go",
    ],
    importpath = "github.com/davidsmd/etcd/mvcc",
    visibility = ["//visibility:public"],
    deps = [
        "//lease:go_default_library",
        "//mvcc/backend:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "//pkg/adt:go_default_library",
        "//pkg/schedule:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@com_github_google_btree//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "index_test.go",
        "key_index_test.go",
        "kv_test.go",
        "kvstore_bench_test.go",
        "kvstore_compaction_test.go",
        "kvstore_test.go",
        "revision_test.go",
        "watchable_store_bench_test.go",
        "watchable_store_test.go",
        "watcher_bench_test.go",
        "watcher_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//lease:go_default_library",
        "//mvcc/backend:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "//pkg/schedule:go_default_library",
        "//pkg/testutil:go_default_library",
        "@com_github_google_btree//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_model//go:go_default_library",
    ],
)
