load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "coder.go",
        "doc.go",
        "http.go",
        "metrics.go",
        "msg_codec.go",
        "msgappv2_codec.go",
        "peer.go",
        "peer_status.go",
        "pipeline.go",
        "probing_status.go",
        "remote.go",
        "snapshot_sender.go",
        "stream.go",
        "transport.go",
        "urlpick.go",
        "util.go",
    ],
    importpath = "github.com/davidsmd/etcd/rafthttp",
    visibility = ["//visibility:public"],
    deps = [
        "//etcdserver/stats:go_default_library",
        "//pkg/httputil:go_default_library",
        "//pkg/ioutil:go_default_library",
        "//pkg/logutil:go_default_library",
        "//pkg/pbutil:go_default_library",
        "//pkg/transport:go_default_library",
        "//pkg/types:go_default_library",
        "//raft:go_default_library",
        "//raft/raftpb:go_default_library",
        "//snap:go_default_library",
        "//version:go_default_library",
        "@com_github_coreos_go_semver//semver:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_xiang90_probing//:go_default_library",
        "@org_golang_x_time//rate:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "fake_roundtripper_test.go",
        "functional_test.go",
        "http_test.go",
        "msg_codec_test.go",
        "msgappv2_codec_test.go",
        "peer_test.go",
        "pipeline_test.go",
        "snapshot_test.go",
        "stream_test.go",
        "transport_bench_test.go",
        "transport_test.go",
        "urlpick_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//etcdserver/stats:go_default_library",
        "//pkg/pbutil:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/types:go_default_library",
        "//raft:go_default_library",
        "//raft/raftpb:go_default_library",
        "//snap:go_default_library",
        "//version:go_default_library",
        "@com_github_coreos_go_semver//semver:go_default_library",
        "@com_github_xiang90_probing//:go_default_library",
        "@org_golang_x_time//rate:go_default_library",
    ],
)
