load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "event.go",
        "event_history.go",
        "event_queue.go",
        "metrics.go",
        "node.go",
        "node_extern.go",
        "stats.go",
        "store.go",
        "ttl_key_heap.go",
        "watcher.go",
        "watcher_hub.go",
    ],
    importpath = "github.com/davidsmd/etcd/store",
    visibility = ["//visibility:public"],
    deps = [
        "//error:go_default_library",
        "//pkg/types:go_default_library",
        "@com_github_jonboulle_clockwork//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "event_test.go",
        "heap_test.go",
        "node_extern_test.go",
        "node_test.go",
        "stats_test.go",
        "store_bench_test.go",
        "store_test.go",
        "store_ttl_test.go",
        "store_v2_test.go",
        "watcher_hub_test.go",
        "watcher_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//error:go_default_library",
        "//pkg/testutil:go_default_library",
        "@com_github_jonboulle_clockwork//:go_default_library",
    ],
)
