load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/davidsmd/etcd/client/integration",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "main_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//client:go_default_library",
        "//integration:go_default_library",
        "//pkg/testutil:go_default_library",
    ],
)
