load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "github.com/davidsmd/etcd/clientv3/clientv3util",
    visibility = ["//visibility:public"],
    deps = ["//clientv3:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["example_key_test.go"],
    embed = [":go_default_library"],
    deps = ["//clientv3:go_default_library"],
)
