load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "util.go",
    ],
    importpath = "github.com/davidsmd/etcd/clientv3/integration",
    visibility = ["//visibility:public"],
    deps = ["//clientv3:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "black_hole_test.go",
        "cluster_test.go",
        "dial_test.go",
        "kv_test.go",
        "lease_test.go",
        "leasing_test.go",
        "logger_test.go",
        "main_test.go",
        "maintenance_test.go",
        "metrics_test.go",
        "mirror_test.go",
        "namespace_test.go",
        "network_partition_test.go",
        "role_test.go",
        "server_shutdown_test.go",
        "txn_test.go",
        "user_test.go",
        "watch_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//clientv3:go_default_library",
        "//clientv3/concurrency:go_default_library",
        "//clientv3/leasing:go_default_library",
        "//clientv3/mirror:go_default_library",
        "//clientv3/namespace:go_default_library",
        "//embed:go_default_library",
        "//etcdserver/api/v3rpc:go_default_library",
        "//etcdserver/api/v3rpc/rpctypes:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//integration:go_default_library",
        "//lease:go_default_library",
        "//mvcc:go_default_library",
        "//mvcc/backend:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/transport:go_default_library",
        "//pkg/types:go_default_library",
        "@com_github_coreos_pkg//capnslog:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
