load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "doc.go",
        "kv.go",
        "txn.go",
        "util.go",
    ],
    importpath = "github.com/davidsmd/etcd/clientv3/leasing",
    visibility = ["//visibility:public"],
    deps = [
        "//clientv3:go_default_library",
        "//clientv3/concurrency:go_default_library",
        "//etcdserver/api/v3rpc/rpctypes:go_default_library",
        "//etcdserver/etcdserverpb:go_default_library",
        "//mvcc/mvccpb:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
