load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "grpc.go",
    ],
    importpath = "github.com/davidsmd/etcd/clientv3/naming",
    visibility = ["//visibility:public"],
    deps = [
        "//clientv3:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//naming:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["grpc_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//clientv3:go_default_library",
        "//integration:go_default_library",
        "//pkg/testutil:go_default_library",
        "@org_golang_google_grpc//naming:go_default_library",
    ],
)
